# DIRTAR

./: .gitignore  IE_sent_key.txt  MODERNIZATION_SUMMARY.md  README.md  action_lemmas.txt  assign_labels_moviedirt.py  dirtar.py  format_corpus.py  key_phrases  pyproject.toml  random_test.txt  requirements.txt  score_labels_moviedirt.py  semantic_parser.py  sentence_parser.py  sentence_splitter.py  setup.py
data/experimental_labels/: 10_SVO_corrected.txt  10_SVO_filtered_corrected.txt  10_SVO_hypernyms.txt  10_multi_reg_geo.txt  10_multi_reg_w.txt  10_multi_sem_geo.txt  10_multi_sem_w.txt  15_SVO.txt  15_SVO_filtered.txt  15_SVO_filtered_corrected.txt  15_SVO_hypernyms.txt  15_multi_reg_geo.txt  15_multi_reg_w.txt  15_multi_sem_w.txt  35_SVO.txt  35_SVO_hypernyms.txt  (+1 more)
experimental_labels/: 10_SVO.txt  10_SVO_corrected.txt  10_SVO_filtered_corrected.txt  10_SVO_hypernyms.txt  10_multi_reg_geo.txt  10_multi_reg_w.txt  10_multi_sem_geo.txt  10_multi_sem_w.txt  15_SVO.txt  15_SVO_corrected.txt  15_SVO_filtered_corrected.txt  15_SVO_hypernyms.txt  15_multi_reg_geo.txt  15_multi_reg_w.txt  15_multi_sem_geo.txt  15_multi_sem_w.txt  35_SVO.txt  35_SVO_corrected.txt  35_SVO_filtered.txt  35_SVO_filtered_corrected.txt  35_SVO_hypernyms.txt  35_multi_reg_geo.txt  35_multi_reg_w.txt  35_multi_sem_geo.txt  35_multi_sem_w.txt
redo_labels_420/: 10_SVO_filtered.txt  10_SVO_filtered_corrected.txt  10_SVO_hypernyms.txt  10_multi_reg_w.txt  10_multi_sem_geo.txt  10_multi_sem_w.txt  15_SVO_filtered_corrected.txt  15_SVO_hypernyms.txt  15_multi_corrected_w.txt  15_multi_reg_geo.txt  15_multi_reg_w.txt  15_multi_sem_w.txt  20_SVO.txt  20_SVO_corrected.txt  20_SVO_hypernyms.txt  20_multi_corrected_w.txt  20_multi_reg_geo.txt  20_multi_sem_geo.txt  25_SVO_corrected.txt  25_SVO_filtered.txt  25_SVO_hypernyms.txt  25_multi_corrected_w.txt  25_multi_reg_geo.txt  25_multi_reg_w.txt
redo_scored_labels_420/: fall_plot.txt  fire_plot.txt  look_plot.txt  stare_plot.txt  total_plot.txt
scored_labels/: aim_plot.txt  cock_plot.txt  draw_plot.txt  fall_plot.txt  fire_plot.txt  hit_plot.txt  look_plot.txt  stare_plot.txt  total_plot.txt  walk_plot.txt
tests/: test_modern_dirtar.py  test_modern_only.py
(+39 files in other folders)
